--- a/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/moh257VisitSummary.html
@@ -1155,7 +1155,7 @@
                                      <th style="color: #888; text-align: center">Frequency</th>
                                      <th style="color: #888; text-align: center">Duration</th>
                                      <th style="color: #888; text-align: center">Duration units</th>
-                                     <th style="color: #888; text-align: center">Dispence date*</th>
+                                     <th style="color: #888; text-align: center">Dispense date*</th>
                                  </tr>
                                  <repeat>
                                      <template>
