renamed unigold instances in hts form to first response

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
@@ -399,7 +399,7 @@
                             <obs class="kit-name"
                             conceptId="164962"
                                  answerConceptIds="164960,164961"
-                                 style="dropdown" answerLabels="Determine,Uni-Gold"
+                                 style="dropdown" answerLabels="Determine,First Response"
                             />
 
                         </td>
@@ -427,7 +427,7 @@
                             <obs class="kit-name"
                                  conceptId="164962"
                                  answerConceptIds="164960,164961"
-                                 style="dropdown" answerLabels="Determine,Uni-Gold"
+                                 style="dropdown" answerLabels="Determine,First Response"
                             />
 
                         </td>
